TODO

20141018
* changes for deployment

20141012
* worked on utility scripts

20141004
* Created stand-alone version of version used in libfsclfs
