@@ -91,6 +91,151 @@ int libfusn_error_backtrace_sprint(
      char *string,
      size_t size );
 
+/* -------------------------------------------------------------------------
+ * Record functions
+ * ------------------------------------------------------------------------- */
+
+/* Creates a record
+ * Make sure the value record is referencing, is set to NULL
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_initialize(
+     libfusn_record_t **usn_record,
+     libcerror_error_t **error );
+
+/* Frees a record
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_free(
+     libfusn_record_t **usn_record,
+     libcerror_error_t **error );
+
+/* Copies the record from the byte stream
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_copy_from_byte_stream(
+     libfusn_record_t *usn_record,
+     const uint8_t *byte_stream,
+     size_t byte_stream_size,
+     libcerror_error_t **error );
+
+/* Retrieves the size
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_size(
+     libfusn_record_t *usn_record,
+     uint32_t *size,
+     libcerror_error_t **error );
+
+/* Retrieves the update time
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_update_time(
+     libfusn_record_t *record,
+     uint64_t *update_time,
+     libcerror_error_t **error );
+
+/* Retrieves the file reference
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_file_reference(
+     libfusn_record_t *record,
+     uint64_t *file_reference,
+     libcerror_error_t **error );
+
+/* Retrieves the parent file reference
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_parent_file_reference(
+     libfusn_record_t *record,
+     uint64_t *parent_file_reference,
+     libcerror_error_t **error );
+
+/* Retrieves the update sequence number
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_update_sequence_number(
+     libfusn_record_t *record,
+     uint64_t *update_sequence_number,
+     libcerror_error_t **error );
+
+/* Retrieves the update reason flags
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_update_reason_flags(
+     libfusn_record_t *record,
+     uint32_t *update_reason_flags,
+     libcerror_error_t **error );
+
+/* Retrieves the update source flags
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_update_source_flags(
+     libfusn_record_t *record,
+     uint32_t *update_source_flags,
+     libcerror_error_t **error );
+
+/* Retrieves the file attribute flags
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_file_attribute_flags(
+     libfusn_record_t *record,
+     uint32_t *file_attribute_flags,
+     libcerror_error_t **error );
+
+/* Retrieves the size of the UTF-8 encoded name
+ * The returned size includes the end of string character
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_utf8_name_size(
+     libfusn_record_t *record,
+     size_t *utf8_name_size,
+     libcerror_error_t **error );
+
+/* Retrieves the UTF-8 encoded name
+ * The size should include the end of string character
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_utf8_name(
+     libfusn_record_t *record,
+     uint8_t *utf8_name,
+     size_t utf8_name_size,
+     libcerror_error_t **error );
+
+/* Retrieves the size of the UTF-16 encoded name
+ * The returned size includes the end of string character
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_utf16_name_size(
+     libfusn_record_t *record,
+     size_t *utf16_name_size,
+     libcerror_error_t **error );
+
+/* Retrieves the UTF-16 encoded name
+ * The size should include the end of string character
+ * Returns 1 if successful or -1 on error
+ */
+LIBFUSN_EXTERN \
+int libfusn_record_get_utf16_name(
+     libfusn_record_t *record,
+     uint16_t *utf16_name,
+     size_t utf16_name_size,
+     libcerror_error_t **error );
+
 #if defined( __cplusplus )
 }
 #endif
