@@ -1,4 +1,8 @@
 TODO
+* update libfusn.3 man page
+
+20141021
+* worked on stand-alone version
 
 20141018
 * changes for deployment
